# media_effect_estimation_with_pymc

./: README.md  hello.py  pyproject.toml
data/: other_media_effect.npy  other_media_obs.npy  tl.npy  unobservable_media_obs_impact.npy  y_obs.npy
src/: create_data.py  estimate.py
util/: mcmc_media_effect_estimate.py  media_effect_model.py  metric_scaler.py  models.py
