[project]
name = "20250405-media-effect-estimation-with-pymc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.4"
dependencies = [
    "pandas==1.5.1",
    "jupyter>=1.0.0,<2.0.0",
    "matplotlib>=3.7.1,<4.0.0",
    "isort>=5.12.0,<6.0.0",
    "black>=23.1.0,<24.0.0",
    "pyproject-flake8>=6.0.0.post1,<7.0.0",
    "seaborn>=0.12.2,<0.13.0",
    "boto3>=1.26.102,<2.0.0",
    "awswrangler==3.9.0",
    "zenpy>=2.0.25,<3.0.0",
    "pydata-google-auth==1.6.0",
    "pip>=23.1,<24.0",
    "google-api-python-client>=2.86.0,<3.0.0",
    "google-analytics-data>=0.16.2,<1.0.0",
    "google-cloud-dialogflow>=2.21.0,<3.0.0",
    "google-cloud-storage>=2.8.0,<3.0.0",
    "tqdm>=4.65.0,<5.0.0",
    "scikit-learn>=1.2.2,<2.0.0",
    "prophet>=1.1.4,<2.0.0",
    "jupyterlab>=4.0.2,<5.0.0",
    "ipywidgets>=8.0.6,<9.0.0",
    "pathos>=0.3.1,<0.4.0",
    "google-auth>=2.22.0,<3.0.0",
    "google-auth-oauthlib>=1.0.0,<2.0.0",
    "google-auth-httplib2>=0.1.0,<1.0.0",
    "pdfkit>=1.0.0,<2.0.0",
    "pylance>=0.6.0,<1.0.0",
    "google-cloud-bigquery>=3.11.4,<4.0.0",
    "plotly>=5.15.0,<6.0.0",
    "dask>=2023.8.0,<2024.0.0",
    "gspread>=5.10.0,<6.0.0",
    "db-dtypes>=1.1.1,<2.0.0",
    "selenium>=4.11.2,<5.0.0",
    "webdriver-manager>=4.0.0,<5.0.0",
    "xmltodict>=0.13.0,<0.14.0",
    "openpyxl>=3.1.2,<4.0.0",
    "pyarrow>=14.0.1,<15.0.0",
    "ipython==8.16.1",
    "slack-sdk>=3.27.1,<4.0.0",
    "kaleido==0.2.1",
    "lightgbm>=4.5.0,<5.0.0",
    "shap>=0.46.0,<1.0.0",
    "category-encoders>=2.6.4,<3.0.0",
    "langdetect>=1.0.9,<2.0.0",
    "polars>=1.12.0,<2.0.0",
    "umap-learn>=0.5.7,<0.6.0",
    "statsmodels>=0.14.4,<0.15.0",
    "pymc>=5.21.1,<6.0.0",
    "graphviz>=0.20.3",
]
